<resources>
    <string name="app_name">3165_asm2_G14</string>
    <string name="title_record">Record</string>
    <string name="title_home">Input</string>
    <string name="title_report">Report</string>
    <string name="title_badge">Badge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">Type of payment:</string>
    <string name="category">Category:</string>
    <string name="input">Amount of payment:</string>
    <string name="ppl">Member(s):</string>
    <string name="payment_method">Payment method:</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="hint_message">Notes(Optional)</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
</resources>