<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.input.InputFragment">

    <!--
    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e3e3e3"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="64dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_date_picker_dialog"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="#000000"
                android:textSize="20sp"
                app:rippleColor="@color/gray_blue"
                app:strokeColor="@color/gray_blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/method" />

                <TextView
                    android:id="@+id/tv_payment_types"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center|start"
                    android:text="@string/type"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/rg_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_income"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/income"
                        android:textColor="@android:color/holo_green_dark"
                        android:textColorLink="#9EB4BB" />

                    <RadioButton
                        android:id="@+id/rb_expense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/expense"
                        android:textColor="@android:color/holo_red_dark"
                        android:textColorLink="#9EB4BB"
                        app:useMaterialThemeColors="false" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/money" />

                <TextView
                    android:id="@+id/tv_amount"
                    android:layout_width="425dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1"
                    android:text="@string/input"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="0.0"
                    android:inputType="number|numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/categories" />

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/category"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spr_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.95" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/type" />

                <TextView
                    android:id="@+id/tv_payment_method"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/payment_method"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spr_method"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.95" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_message">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ta_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint='#5C7987'
                    android:text="@string/submit"
                    app:rippleColor="#151515" />

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#5C7987"
                    android:text="@string/clear"
                    app:rippleColor="#151515" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>